--- a/Module3-solution/index.html
+++ b/Module3-solution/index.html
@@ -6,42 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <div class="company-name">Food, LLC
+        <div class="topnav">
+            <span class="title-company">Food, LLC</span>
+            <div id="myLinks">
+                <a href="#Chicken">Chicken</a>
+                <a href="#Beef">Beef</a>
+                <a href="#Sushy">Sushy</a>
+            </div>
+            <a href="javascript:void(0);" class="icon hamburguer-menu">
+                <i class=" fa fa-bars"></i>
+            </a>
         </div>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn closeNav">&times;</a>
-            <a href="#">Chicken</a>
-            <a href="#">Beef</a>
-            <a href="#">Sushy</a>
-        </div>
-        <span id="hamburguer-menu"><svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 469.333 469.333"
-                xml:space="preserve" class="icon-topheader">
-                <g>
-                    <g>
-                        <g>
-                            <path d="M53.333,106.667H416c29.417,0,53.333-23.927,53.333-53.333S445.417,0,416,0H53.333C23.917,0,0,23.927,0,53.333
-            S23.917,106.667,53.333,106.667z"></path>
-                            <path d="M416,181.333H53.333C23.917,181.333,0,205.26,0,234.667S23.917,288,53.333,288H416c29.417,0,53.333-23.927,53.333-53.333
-            S445.417,181.333,416,181.333z"></path>
-                            <path d="M416,362.667H53.333C23.917,362.667,0,386.594,0,416s23.917,53.333,53.333,53.333H416
-            c29.417,0,53.333-23.927,53.333-53.333S445.417,362.667,416,362.667z"></path>
-                        </g>
-                    </g>
-                </g>
-            </svg></span>
     </header>
     <main class="wrapper">
         <h1 class="title-main">Our Menu </h1>
         <div class="container">
             <div class="container__box">
                 <div class="container__title-box">
-                    <h3 class="container__title">Chicken</h3>
+                    <h3 class="container__title" id="Chicken">Chicken</h3>
                 </div>
                 <div class="container__text">orem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem
@@ -57,7 +45,7 @@
             </div>
             <div class="container__box">
                 <div class="container__title-box">
-                    <h3 class="container__title">Beef</h3>
+                    <h3 class="container__title" id="Beef">Beef</h3>
                 </div>
                 <div class="container__text">orem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem
@@ -73,7 +61,7 @@
             </div>
             <div class="container__box">
                 <div class="container__title-box">
-                    <h3 class="container__title">Sushy</h3>
+                    <h3 class="container__title" id="Sushy">Sushy</h3>
                 </div>
                 <div class="container__text">orem Ipsum is simply dummy text of the printing and typesetting industry.
                     Lorem
